update some properties

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,7 @@
 @import url("../Components/form/Configuration.css");
 @import url("../Components/notification/Notification.css");
 @import url("../Components/switch/Switch.css");
+@import url("../Components/input/TextInput.css");
 
 @tailwind base;
 @tailwind components;
