--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -821,6 +821,25 @@
   line-height: 1.5rem;
 }
 
+.text-input-base {
+  position: relative;
+  flex: 1 1 0%;
+}
+
+.text-input-m {
+  width: 100%;
+  border-radius: 0.125rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(211 211 211 / var(--tw-border-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 /* ! tailwindcss v3.1.8 | MIT License | https://tailwindcss.com */
 
 /*
@@ -1367,6 +1386,11 @@ video {
   margin: 0.25rem;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -1378,6 +1402,10 @@ video {
 
 .mr-3 {
   margin-right: 0.75rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-1 {
@@ -1495,9 +1523,23 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .main-container {
