--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -669,6 +669,14 @@
   padding: 0.5rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
+  transition-duration: 200ms;
+}
+
+.btn-export:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .notification-base {
@@ -885,6 +893,7 @@
   z-index: 99;
   height: 10px;
   width: 20px;
+  transform-origin: bottom;
   --tw-scale-x: 0;
   --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -892,6 +901,7 @@
   border-color: transparent;
   --tw-border-opacity: 1;
   border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
+  transition-delay: 50ms;
   transition-duration: 200ms;
 }
 
