--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -858,7 +858,7 @@
   content: attr(data-tooltip);
   position: absolute;
   top: 3.5em;
-  z-index: 99;
+  z-index: 999;
   width: -moz-max-content;
   width: max-content;
   transform-origin: top;
@@ -890,7 +890,7 @@
   content: "";
   position: absolute;
   top: 2em;
-  z-index: 99;
+  z-index: 999;
   height: 10px;
   width: 20px;
   transform-origin: bottom;
@@ -911,6 +911,42 @@
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.a-loader {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  animation: a-width 2s ease-in;
+  height: 100%;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes a-width {
+  0% {
+    width: 0%;
+  }
+
+  50% {
+    width: 50%;
+  }
+
+  100% {
+    width: 100%;
+  }
 }
 
 /* ! tailwindcss v3.1.8 | MIT License | https://tailwindcss.com */
@@ -1455,8 +1491,28 @@ video {
   position: static;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.z-\[98\] {
+  z-index: 98;
+}
+
+.z-\[19\] {
+  z-index: 19;
 }
 
 .m-1 {
@@ -1513,6 +1569,10 @@ video {
   display: none;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-\[7vh\] {
   height: 7vh;
 }
@@ -1521,24 +1581,20 @@ video {
   height: 6vh;
 }
 
-.w-\[100\%\] {
-  width: 100%;
+.min-h-\[8px\] {
+  min-height: 8px;
 }
 
-.max-w-\[100px\] {
-  max-width: 100px;
-}
-
-.max-w-\[100\%\] {
-  max-width: 100%;
-}
-
-.max-w-\[120px\] {
-  max-width: 120px;
+.w-\[100vw\] {
+  width: 100vw;
 }
 
 .max-w-\[150px\] {
   max-width: 150px;
+}
+
+.max-w-\[100\%\] {
+  max-width: 100%;
 }
 
 .flex-1 {
