--- a/src/Components/input/inputgroup.css
+++ b/src/Components/input/inputgroup.css
@@ -1,9 +1,9 @@
 .input-group-base {
   @apply flex flex-grow px-1
-  border-[1px] border-white rounded-sm w-[100%] relative border-on-hover;
+  border-[1px] border-transparent rounded-sm w-[100%] relative border-on-hover;
 }
 .input-group-input {
-  @apply border-none pl-1 outline-none ml-2;
+  @apply border-none pl-1 outline-none ml-2 bg-transparent text-gray-800 dark:text-gray-200;
 }
 
 .--o-n-input::-webkit-outer-spin-button,
