--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -236,7 +236,19 @@
   border-left-width: 1px;
   --tw-border-opacity: 1;
   border-left-color: rgb(211 211 211 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 254 254 / var(--tw-bg-opacity));
   transition-duration: 300ms;
+}
+
+.dark .sidebar-base {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(17 24 39 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
+
+.sidebar-base {
   animation: display 1s ease !important;
 }
 
@@ -281,6 +293,11 @@
   border-bottom-color: rgb(211 211 211 / var(--tw-border-opacity));
 }
 
+.dark .sidebar-heading {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(31 41 55 / var(--tw-border-opacity));
+}
+
 .sidebar-heading button {
   display: flex;
   flex: 1 1 0%;
@@ -293,18 +310,19 @@
 }
 
 .sidebar-btn-active {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
   --tw-text-opacity: 1 !important;
   color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+}
+
+.dark .sidebar-btn-active {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
 .sidebar-content {
   flex: 1 1 0%;
   overflow: hidden;
   overflow-y: auto;
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .sidebar-content::-webkit-scrollbar-track {
@@ -544,8 +562,7 @@
   flex-grow: 1;
   border-radius: 0.125rem;
   border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-color: transparent;
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
@@ -559,9 +576,17 @@
 .input-group-input {
   margin-left: 0.5rem;
   border-style: none;
+  background-color: transparent;
   padding-left: 0.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.dark .input-group-input {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .--o-n-input::-webkit-outer-spin-button,
@@ -814,6 +839,7 @@
 .text-input-base {
   position: relative;
   flex: 1 1 0%;
+  background-color: transparent;
 }
 
 .text-input-m {
@@ -822,6 +848,7 @@
   border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(211 211 211 / var(--tw-border-opacity));
+  background-color: transparent;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
@@ -969,8 +996,7 @@
   align-items: center;
   justify-content: flex-start;
   border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-color: transparent;
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 0.25rem;
@@ -1766,6 +1792,13 @@ video {
   flex-grow: 1;
   flex-direction: row;
   overflow: hidden;
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 219 219 / var(--tw-bg-opacity));
+}
+
+.dark .container-grow {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
 .canvas-wrapper {
@@ -1776,8 +1809,6 @@ video {
   max-width: 100vw;
   flex-grow: 1;
   overflow: auto;
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 219 219 / var(--tw-bg-opacity));
 }
 
 #canvas-root {
