--- a/src/Components/tooltip/tooltip.css
+++ b/src/Components/tooltip/tooltip.css
@@ -1,23 +1,34 @@
 .tooltip {
-  @apply relative flex items-center justify-center;
+  @apply relative flex items-center justify-center min-h-[100%];
 }
 .tooltip::before {
   content: attr(data-tooltip);
-  @apply text-sm rounded-md duration-200 
+  /* @apply text-sm rounded-md duration-200 
   origin-top scale-0 z-[999] px-2 py-1 
   top-[3.5em] w-max absolute 
-  bg-white dark:bg-[#333]
-  text-gray-900 dark:text-gray-100;
+  dark:bg-white bg-[#333]
+  dark:text-gray-800 text-gray-100; */
+
+  @apply top-[105%] text-sm 
+  rounded-md duration-100
+  opacity-0
+  origin-top scale-0 z-[999] 
+  px-2 py-1 w-max absolute 
+  dark:bg-white bg-[#333]
+  dark:text-gray-800 text-gray-100;
 }
 .tooltip::after {
   content: "";
-  @apply duration-200 absolute
-  h-[10px] w-[20px] z-[999] 
-  top-[2em] scale-0 
-  border-[10px] border-transparent delay-[50ms]
-  border-b-[white] origin-bottom;
+  @apply duration-100 
+  absolute
+  h-[15px] w-[15px] z-[990] 
+  top-[100%] 
+  scale-0
+  opacity-0 
+  rotate-45
+  bg-[#333] dark:bg-[white];
 }
 .tooltip:hover::before,
 .tooltip:hover::after {
-  @apply inline-block scale-100;
+  @apply inline-block scale-100 opacity-100;
 }
