--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -704,9 +704,13 @@
   border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding: 0.5rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
   transition-duration: 200ms;
 }
 
@@ -715,6 +719,20 @@
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .btn-export {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.dark .btn-export:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(68 68 68 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .notification-base {
@@ -803,8 +821,8 @@
 .switch-base {
   position: relative;
   display: flex;
-  height: 28px;
-  width: 60px;
+  height: 20px;
+  width: 50px;
   align-items: center;
   justify-content: center;
   border-radius: 30px;
@@ -828,21 +846,31 @@
 .switch-base span {
   position: absolute;
   left: -2px;
+  display: flex;
   height: 30px;
   width: 30px;
   --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  align-items: center;
+  justify-content: center;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
   transition-duration: 500ms;
+}
+
+.dark .switch-base span {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .switch-active span {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
   /* translate-x-[w-switchBase - w-swithThumb]; */
-  transform: translateX(calc(60px - 30px + 1px));
+  transform: translateX(calc(50px - 30px + 1px));
 }
 
 .switch {
@@ -908,14 +936,20 @@ input[type="number"]::-webkit-inner-spin-button {
 .tooltip {
   position: relative;
   display: flex;
+  min-height: 100%;
   align-items: center;
   justify-content: center;
 }
 
 .tooltip::before {
   content: attr(data-tooltip);
+  /* @apply text-sm rounded-md duration-200 
+  origin-top scale-0 z-[999] px-2 py-1 
+  top-[3.5em] w-max absolute 
+  dark:bg-white bg-[#333]
+  dark:text-gray-800 text-gray-100; */
   position: absolute;
-  top: 3.5em;
+  top: 105%;
   z-index: 999;
   width: -moz-max-content;
   width: max-content;
@@ -925,7 +959,7 @@ input[type="number"]::-webkit-inner-spin-button {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
@@ -933,34 +967,38 @@ input[type="number"]::-webkit-inner-spin-button {
   font-size: 0.875rem;
   line-height: 1.25rem;
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-  transition-duration: 200ms;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+  opacity: 0;
+  transition-duration: 100ms;
 }
 
 .dark .tooltip::before {
   --tw-bg-opacity: 1;
-  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .tooltip::after {
   content: "";
   position: absolute;
-  top: 2em;
-  z-index: 999;
-  height: 10px;
-  width: 20px;
-  transform-origin: bottom;
+  top: 100%;
+  z-index: 990;
+  height: 15px;
+  width: 15px;
+  --tw-rotate: 45deg;
   --tw-scale-x: 0;
   --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  border-width: 10px;
-  border-color: transparent;
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
-  transition-delay: 50ms;
-  transition-duration: 200ms;
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+  opacity: 0;
+  transition-duration: 100ms;
+}
+
+.dark .tooltip::after {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .tooltip:hover::before, 
@@ -969,6 +1007,7 @@ input[type="number"]::-webkit-inner-spin-button {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 1;
 }
 
 .a-loader {
@@ -1678,6 +1717,10 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -1696,10 +1739,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
 }
 
 .ml-3 {
@@ -1816,6 +1855,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1826,13 +1870,18 @@ video {
   line-height: 1rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .font-semibold {
   font-weight: 600;
+}
+
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1843,11 +1892,6 @@ video {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-blue-700 {
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
 .main-container {
@@ -1923,4 +1967,9 @@ video {
 #download, 
 #upload {
   display: none;
+}
+
+.dark .dark\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
